--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" href="style.css">
     </head>
 
 
     <body>
+        <div class="container">
+
+            <div class="result">
+                <span>0</span>
+            </div>
+            
+            <div class="buttons">
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+            </div>
+
+        </div>
+
+        <script> src="index.js" </script>
         
     </body>
 
