--- a/index.html
+++ b/index.html
@@ -13,22 +13,26 @@
             </div>
             
             <div class="buttons">
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
+                <button class="item">AC</button>
+                <button class="item">+/-</button>
+                <button class="item">%</button>
+                <button class="item">/</button>
+                <button class="item">7</button>
+                <button class="item">8</button>
+                <button class="item">9</button>
+                <button class="item">x</button>
+                <button class="item">4</button>
+                <button class="item">5</button>
+                <button class="item">6</button>
+                <button class="item">-</button>
+                <button class="item">1</button>
+                <button class="item">2</button>
+                <button class="item">3</button>
+                <button class="item">+</button>
+                <button class="item">0</button>
+                <button class="item">,</button>
+                <button class="item">=</button>
+
             </div>
 
         </div>
