--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
             </div>
             
             <div class="buttons">
-                <button class="item">AC</button>
-                <button class="item">+/-</button>
-                <button class="item">%</button>
-                <button class="item">/</button>
-                <button class="item">7</button>
-                <button class="item">8</button>
-                <button class="item">9</button>
-                <button class="item">x</button>
-                <button class="item">4</button>
-                <button class="item">5</button>
-                <button class="item">6</button>
-                <button class="item">-</button>
-                <button class="item">1</button>
-                <button class="item">2</button>
-                <button class="item">3</button>
-                <button class="item">+</button>
-                <button class="item">0</button>
-                <button class="item">,</button>
-                <button class="item">=</button>
+                <button class="item item1 clear">AC</button>
+                <button class="item item1 negative">+/-</button>
+                <button class="item persent sign">%</button>
+                <button class="item item3 sign">/</button>
+                <button class="item numbers">7</button>
+                <button class="item numbers">8</button>
+                <button class="item numbers">9</button>
+                <button class="item item3 sign">x</button>
+                <button class="item numbers">4</button>
+                <button class="item numbers">5</button>
+                <button class="item numbers">6</button>
+                <button class="item item3 sign">-</button>
+                <button class="item numbers">1</button>
+                <button class="item numbers">2</button>
+                <button class="item numbers">3</button>
+                <button class="item item3 sign">+</button>
+                <button class="item itemzero numbers">0</button>
+                <button class="item comma">,</button>
+                <button class="item item3 equals">=</button>
 
             </div>
 
