--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
     <body>
         <div class="container">
-
             <div class="result">
                 <span>0</span>
             </div>
@@ -15,7 +14,7 @@
             <div class="buttons">
                 <button class="item item1 clear">AC</button>
                 <button class="item item1 negative">+/-</button>
-                <button class="item persent sign">%</button>
+                <button class="item percent sign">%</button>
                 <button class="item item3 sign">/</button>
                 <button class="item numbers">7</button>
                 <button class="item numbers">8</button>
@@ -37,7 +36,7 @@
 
         </div>
 
-        <script> src="index.js" </script>
+        <script src="index.js"></script>
         
     </body>
 
